规范并简化错误流程处理和提示